--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -35,7 +35,7 @@
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#philosophy" class="nav-link">Philosophy</a>
                 <a href="https://github.com/omaxtr/GamerGamma" class="nav-link" target="_blank">GitHub</a>
-                <a href="https://github.com/omaxtr/GamerGamma/releases/download/1.2/GamerGamma.zip" class="btn-primary-small">Download</a>
+                <a href="https://github.com/omaxtr/GamerGamma/releases/download/1.2/GamerGamma.exe" class="btn-primary-small">Download</a>
             </nav>
         </div>
     </header>
@@ -370,6 +370,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
