--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -307,7 +307,7 @@
                     <h2 class="cta-title">Ready to gain the edge?</h2>
                     <p class="cta-description">Download Gamer Gamma now and experience professional-grade display control.</p>
                     <div class="cta-buttons">
-                        <a href="https://github.com/omaxtr/GamerGamma/releases/download/1.2/GamerGamma.zip" class="btn-large btn-download btn-glow">
+                        <a href="https://github.com/omaxtr/GamerGamma/releases/download/1.2/GamerGamma.exe" class="btn-large btn-download btn-glow">
                             Download v1.2
                         </a>
                         <a href="https://github.com/omaxtr/GamerGamma" class="btn-large btn-secondary" target="_blank">
@@ -370,6 +370,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
