--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -90,7 +90,8 @@
                                 <span class="vt-status">Clean</span>
                             </div>
                         </a>
-                        
+
+                            <div>
                         <!-- Secondary Links (GitHub + Coffee) -->
                         <div class="hero-extra-links">
                         <p class="cta-note" style="font-style: italic; font-size: 0.75rem;">Want to see whats inside?<br>
@@ -382,6 +383,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
