--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -19,10 +19,10 @@
         <div class="container">
             <div class="logo">   
     
-<svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="breathing-logo">
     <!-- Bulb Shape -->
     <path d="M9 21h6M9 18h6M10 21v1a1 1 0 001 1h2a1 1 0 001-1v-1M12 2C8.13 2 5 5.13 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.87-3.13-7-7-7z" 
-          fill="url(#multiColorBulb)"/>
+          fill="url(#revMultiColorBulb)"/>
     <!-- Filament -->
     <path d="M12 6v3M9 9h6" stroke="white" stroke-width="1.2" stroke-linecap="round" opacity="0.6"/>
     <defs>
@@ -345,9 +345,10 @@
                 <div class="footer-brand">
                     <div class="logo">
         
-<svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="breathing-logo">
+    <!-- Bulb Shape -->
     <path d="M9 21h6M9 18h6M10 21v1a1 1 0 001 1h2a1 1 0 001-1v-1M12 2C8.13 2 5 5.13 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.87-3.13-7-7-7z" 
-          fill="url(#footerMultiColorBulb)"/>
+          fill="url(#revMultiColorBulb)"/>
     <!-- Filament -->
     <path d="M12 6v3M9 9h6" stroke="white" stroke-width="1.2" stroke-linecap="round" opacity="0.6"/>
     <defs>
@@ -394,6 +395,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
