--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 <body>
     <div class="stars"></div>
@@ -393,6 +394,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
