--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -458,7 +458,7 @@
             <div class="tactical-grid">
                 <div class="tactical-content">
                     <div class="badge badge-pro">Surgical Precision</div>
-                    <h2 class="tactical-title";">Precision <span
+                    <h2 class="tactical-title" style="color: var(--text-primary);">Precision <span
                             class="gradient-text">Curve Mapping</span></h2>
                     <p class="tactical-text">
                         Forget generic presets. Map your display's response with a professional 10-bit precision
@@ -618,4 +618,5 @@
 
 
 </html>
+
 
