--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -47,8 +47,8 @@
             <nav class="nav">
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#philosophy" class="nav-link">Philosophy</a>
-                <a href="https://github.com/omaxtr/GamerGamma" class="nav-link" target="_blank">GitHub</a>
-                <a href="https://github.com/omaxtr/GamerGamma/releases/download/1.4/GamerGamma.exe"
+                <a href="https://github.com/omaquu/GamerGamma" class="nav-link" target="_blank">GitHub</a>
+                <a href="https://github.com/omaquu/GamerGamma/releases/download/1.4/GamerGamma.exe"
                     class="btn-primary-small">Download</a>
             </nav>
         </div>
@@ -99,7 +99,7 @@
 
                     <div class="hero-buttons-row">
                         <!-- 1. Main Download Button -->
-                        <a href="https://github.com/omaxtr/GamerGamma/releases/download/1.4/GamerGamma.exe"
+                        <a href="https://github.com/omaquu/GamerGamma/releases/download/1.4/GamerGamma.exe"
                             class="btn-large btn-download btn-glow">
                             Download Gamer Gamma for FREE
                         </a>
@@ -118,11 +118,11 @@
                         <div class="hero-extra-links">
                             <p class="cta-note">
                                 Want to see what's inside?<br>
-                                <a href="https://github.com/omaxtr/GamerGamma/" class="github-link"
+                                <a href="https://github.com/omaquu/GamerGamma/" class="github-link"
                                     style="color: #ffffff !important;">View Project on GitHub</a>
                             </p>
 
-                            <a href="https://ko-fi.com/omaxtr/tip" target="_blank" class="btn-coffee-hero">
+                            <a href="https://ko-fi.com/omaquu/tip" target="_blank" class="btn-coffee-hero">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M18 8h1a4 4 0 0 1 0 8h-1"></path>
@@ -618,5 +618,6 @@
 
 
 </html>
+
 
 
